--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 Study manager
 =============
 
-A tiny website created with html, css and js to help me focus and organize my homeworks and my personnal project. This is not a website designed to be used by everyone, or hosted online. I only use it as a local server in my home and it's adapted for me.
+An app to help me focus on my work and my project with a todo list and a pomodoro timer. 
+First version built with godot but I will consider using html, css and js for the final version. 
+I've created this app for me first, so it may not be adapted to your device and you work method. 
+
