--- a/README
+++ b/README
@@ -4,3 +4,5 @@ Study manager
 An app to help me focus on my work and my project with a todo list and a pomodoro timer. 
 First version built with godot but I will consider using html, css and js for the final version. 
 I've created this app for me first, so it may not be adapted to your device and you work method. 
+
+Go to previews folder to see how the app looks like.
